--- a/flightSF/src/index.css
+++ b/flightSF/src/index.css
@@ -13,14 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+
 
 body, html {
   width: 100%;
@@ -41,11 +34,12 @@ h1 {
 
 
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /* outline: 4px auto -webkit-focus-ring-color; */
+  outline: 4px auto #1a60e1;
 }
 
 @media (prefers-color-scheme: light) {
